--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/websockets": "^9.3.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "mongoose": "^6.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
